--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "author": "Tarik Deliktas",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.37.1",
+    "@playwright/test": "^1.39.0",
+    "@types/node": "^20.8.6",
     "allure-commandline": "^2.24.0",
     "allure-playwright": "2.8.1",
     "experimental-allure-playwright": "^0.0.3"
